--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ nav ul li a:hover{
 .home{
     width: 100%;
     height:700px;
-    background-image: url(./images/bg.webp);
+    background-image: url(bg.webp);
     background-size:cover;
     background-repeat: no-repeat;
 } 
